# defang

./: .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yml  .prettierignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  POWER.md  README.md  SCALEWAY_DEPLOY_LOG.md  app.py  defang.code-workspace  default.nix  flake.nix  shell.nix
.agents/plugins/: marketplace.json
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/rules/: go-quality.md  linting.md  provider-pattern.md  testing.md
.devcontainer/: devcontainer.Dockerfile  devcontainer.json  post-create.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-checklist.yml
.github/workflows/: build-samples-json.yml  check-sample.yml  (+13 more)
claude-plugin/: .mcp.json
cli/: .gitignore  go.mod  go.sum
docs/: agent-reference.md
mcp/: get_knowledge_base.py  get_sample_examples.py  go.mod  go.sum  main.go
nix/: bin.nix  cli.nix  overlay.nix
power/: POWER.md
samples/: README.md  builder.js
samples/python/llama/defang-llama/: pyproject.toml  run.sh
samples/python/llama/defang-llama/defang_llama/: __init__.py  llm.py
samples/python/llama/defang-llama/defang_llama/templates/: index.html
scripts/: pre-commit  pre-push
skills/: debug.md  deploy.md  estimate.md  prepare.md  status.md
src/: .dockerignore  .gitignore  .goreleaser-prebuilt.yml  .goreleaser.yml  AGENTS.md  Dockerfile  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  go.work.sum  smithery.yaml
(+1980 files in other folders)
